--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
+Christophe Hurpeau <christophe.hurpeau+github@gmail.com>
 Christophe Hurpeau <christophe@hurpeau.com>
+Vitalik Zaidman <vzaidman@gmail.com>
